--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "DissolveEffectForUGUI",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mob-sakai/DissolveEffectForUGUI.git"
   },
   "src": "Assets/DissolveEffectForUGUI",
+  "unity": "/Applications/Unity5.5.0p4/Unity5.5.0p4.app/Contents/MacOS/Unity",
   "license": "MIT"
 }
